# Spectral-EDEN

./: .gitignore  Dockerfile  entrypoint.sh  run_maze_v4.sh
catkin_deps_ws/devel/: .catkin  local_setup.fish
catkin_deps_ws/src/: catkin_simple  gflags_catkin  glog_catkin
catkin_ws/: CMakeCache.txt  CTestConfiguration.ini
catkin_ws/catkin_generated/: generate_cached_setup.py  order_packages.cmake  setup_cached.sh
catkin_ws/devel/: .catkin
catkin_ws/src/: Communication_swarm_data  Exploration_eden  (+29 more)
catkin_ws/src/Exploration_eden/: CMakeLists.txt  README.md
catkin_ws/src/Exploration_eden/include/eden/: eden.h  eden_fsm.h  eden_safety.h
catkin_ws/src/Exploration_eden/launch/: single_exp_demo_city_lite_low.launch  single_exp_demo_city_lite_low_headless.launch  single_exp_demo_classical_office_lite_low.launch  single_exp_demo_darpa_lite_low.launch  single_exp_demo_indoor_corridors_lite_low.launch  single_exp_demo_large_tunnel_lite_low.launch  single_exp_demo_maze3_lite_low.launch  single_exp_demo_maze3_lite_low_headless.launch  single_exp_demo_maze4_lite_low.launch  single_exp_demo_multi_storage_garage_lite_low.launch
catkin_ws/src/Exploration_eden/resource/: eden_sim_city_lite_low.yaml  eden_sim_classical_office_low.yaml  eden_sim_darpa_low.yaml  eden_sim_indoor_corridors_low.yaml  eden_sim_large_tunnel_lite_low.yaml  eden_sim_maze3_lite_low.yaml  eden_sim_maze4_lite_low.yaml  eden_sim_multi_storage_garage_low.yaml  spectral_eden_v4.yaml
catkin_ws/src/Exploration_eden/resource/lite_sim/: city.yaml  classical_office.yaml  large_tunnel.yaml  uav_model_simulator.yaml
catkin_ws/src/Exploration_eden/rviz/: eden_demo_co_lite.rviz  eden_demo_lite.rviz  eden_demo_m_lite.rviz
catkin_ws/src/Exploration_eden/src/: eden.cpp  eden_fsm.cpp  eden_node.cpp
catkin_ws/src/Exploration_eden/test/: eden_safety_test.cpp
catkin_ws/src/Exploration_eden/worlds/: city.world  map_forest.world  maze2.world  octa_maze.world  tunnel_large.world
catkin_ws/src/Mapping_mr_dtg_plus/: CMakeLists.txt
catkin_ws/src/Mapping_mr_dtg_plus/include/mr_dtg_plus/: committed_target_manager.h  mr_dtg_plus.h  mr_dtg_plus_structures.h  spectral_snapshot_builder.h  spectral_v2_policy.h  spectral_v4_backends.h  spectral_worker.h
catkin_ws/src/Mapping_mr_dtg_plus/src/: committed_target_manager.cpp  incremental_fiedler.cpp  local_appr.cpp  mr_dtg_plus.cpp  mr_dtg_plus_eden_baseline.cpp  mr_dtg_plus_global.cpp  mr_dtg_plus_initialization.cpp  mr_dtg_plus_path_search.cpp  mr_dtg_plus_spectral.cpp  mr_dtg_plus_target_refine.cpp  mr_dtg_plus_v4_global.cpp  nystrom_bisection.cpp  spectral_v2_policy.cpp  spectral_worker.cpp
catkin_ws/src/Mapping_mr_dtg_plus/test/: committed_target_manager_test.cpp  spectral_iterative_solver_test.cpp  spectral_snapshot_compression_test.cpp  spectral_v4_backends_test.cpp  spectral_worker_test.cpp
eden_src/: .gitattributes  LICENSE  README.md  Spectral_EDEN_Code_Modification_Prompt.txt  Spectral_EDEN_Research_Engineering_Report.md  Spectral_EDEN_V4.md  Spectral_EDEN_v2_Optimization_Proposal.md  Spectral_EDEN_v3.md  exploration_statistics.md  spectral_eden_v4.1.md  spectral_eden_v4.2.md  spectral_eden_v4.3.md
eden_src/EDEN/Mapping/lowres_map_lite/: CMakeLists.txt  README.md  package.xml
eden_src/EDEN/Mapping/lowres_map_lite/include/lowres_map_lite/: lowres_map_lite.h
eden_src/EDEN/Mapping/lowres_map_lite/src/: lowres_map_lite.cpp  lrm_data_initialization.cpp  path_search_lite.cpp
eden_src/EDEN/Mapping/map_visualization/: CMakeLists.txt  README.md
eden_src/EDEN/Mapping/map_visualization/include/map_visualization/: map_visualization.h
eden_src/EDEN/Mapping/map_visualization/src/: map_pcl_node.cpp  map_visualization.cpp
eden_src/EDEN/Test/ato_test/: CMakeLists.txt  README.md
eden_src/EDEN/Test/ato_test/launch/: dtgplus_test.launch  eroi_test.launch  lrm_test.launch  map_test.launch  route_test.launch  traj_branch_test.launch  traj_debug.launch  traj_vis.launch  traj_vis_replay.launch
eden_src/EDEN/Test/ato_test/resource/: dtgplus_test.yaml  eroi_test.yaml  lrm_test.yaml  map_test.yaml  route_test.yaml  traj_branch_test.yaml  traj_debug.yaml
eden_src/EDEN/Test/ato_test/rviz/: dtgplus_test.rviz  eroi_test.rviz  lrm_test.rviz  map_test.rviz  route_test.rviz  traj_branch_test.rviz  traj_debug.rviz  traj_viz.rviz  traj_viz_replan_c.rviz  traj_viz_replan_city.rviz  traj_viz_replan_d.rviz  traj_viz_replan_l.rviz  traj_viz_replan_m.rviz
eden_src/EDEN/Test/ato_test/src/: debug_puber.cpp  dtgplus_test_node.cpp  eroi_test_node.cpp  lrm_test_node.cpp  map_test_node.cpp  route_test_node.cpp  traj_branch_test.cpp  traj_debug.cpp  traj_vel_vis.cpp
eden_src/EDEN/Trajectory/gcopter_debug/: CMakeLists.txt
eden_src/EDEN/Trajectory/gcopter_debug/include/gcopter_debug/: fastcheck_traj.hpp  gcopter.hpp  gcopter_aggressive.hpp  gcopter_norm.hpp  lbfgs.hpp  minco.hpp  traj_opt.h  trajectory.hpp  trajectory4.hpp
eden_src/EDEN/Trajectory/gcopter_debug/src/: traj_opt.cpp
eden_src/uav_simulator/camera_sensing/mesh_render/: CMakeLists.txt
eden_src/uav_simulator/camera_sensing/mesh_render/config/: mesh_render.yaml
eden_src/uav_simulator/camera_sensing/mesh_render/include/mesh_render/: mesh_render.h
eden_src/uav_simulator/camera_sensing/mesh_render/src/: mesh_render.cpp  mesh_render_node.cpp
eden_src/uav_simulator/camera_sensing/pointcloud_render/: CMakeLists.txt
eden_src/uav_simulator/camera_sensing/pointcloud_render/config/: pointcloud_render.yaml  pointcloud_render_corse.yaml
eden_src/uav_simulator/camera_sensing/pointcloud_render/include/: depth_render.cuh  pointcloud_render.h
eden_src/uav_simulator/camera_sensing/pointcloud_render/src/: depth_render.cu  depth_render_node.cpp  pcl_render_node.cpp  pointcloud_render.cpp  pointcloud_render_node.cpp
eden_src/uav_simulator/map_render/: CMakeLists.txt
eden_src/uav_simulator/map_render/resource/: complex_office.stl  duplex_office.stl  indoor_corridors.pcd  large_tunnel.pcd  multi_storage_garage.pcd  octa_maze.stl
eden_src/uav_simulator/map_render/src/: click_map.cpp  map_render_node.cpp  pointcloud_modifier.cpp
(+11084 files in other folders)
